--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run: mkdir /tmp/test-results
       - persist_to_workspace:
-          root: /tmp
+          root: tmp
           paths:
             - test-results
 
@@ -22,15 +22,17 @@ jobs:
             pip install virtualenv
             virtualenv venv
       - persist_to_workspace:
-          root: ./
+          root: venv
           paths:
-            - venv
+            - *
 
   install_required_libraries:
     docker:
       - image: bpc0081/docker-python-test:v1
     steps:
       - checkout
+      - attach_workspace:
+          at: venv
       - run:
           name: Enter virtual enviroment
           command: |
@@ -39,15 +41,17 @@ jobs:
           command: |
             pip install -r requirements.txt
       - persist_to_workspace:
-          root: ./
+          root: venv
           paths:
-            - venv
+            - *
 
   run_tests:
     docker:
       - image: bpc0081/docker-python-test:v1
     steps:
       - checkout
+      - attach_workspace:
+          at: venv
       - run:
           name: Run Test Case 1
           command: |
