--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,11 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: venv
+          at: .
+      - run:
+          name: Enter virtual enviroment
+          command: |
+            source venv/bin/activate
       - run:
           name: Run Test Case 1
           command: |
