updated ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,10 +76,17 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:   # (2)
-          version: 17.05.0-ce
           docker_layer_caching: true # (3)
       - run:
-          name: Docker  login
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+      - run:
+          name: Docker login
           command: docker login -u $DOCKER_USER -p $DOCKER_PASS
       # build the application image
       - run:
